added secondary analysis form

--- a/analysis.html
+++ b/analysis.html
@@ -106,6 +106,114 @@
     </center>
   </section>
 
+  <section class="ftco-section bg-white">
+        <div class="container">
+          <div class="row justify-content-center mb-5">
+            <div class="col-md-7 text-center heading-section ftco-animate">
+              <h2 class="mb-4"> Stage Progression Form</h2>
+              <p>Please fill out the data below for a more detailed analysis.</p>
+            </div>
+          </div>
+        </div>
+
+        <style>
+        input[type="file"] {
+          display: none;
+      }
+      .custom-file-upload {
+          cursor: pointer;
+
+          background: #6a28ff;
+          border: 1px solid #6a28ff;
+          padding: 10px 24px;
+          color: #ffffff;
+          border-radius: 25px;
+      }
+
+      .custom-file-upload:hover {
+        color: #6a28ff;
+        background: #ffffff;
+      }
+      </style>
+
+  <center>
+
+      <br>
+      <br>
+
+        <div class="col-md-6 pr-md-5">
+          <form action="#">
+            <div class="form-group">
+              <select class="form-control">
+                <option value="volvo">*Biological sex status*</option>
+                <option value="volvo">Male</option>
+                <option value="saab">Female</option>
+                <option value="fiat">Transgender</option>
+                <option value="audi">Other</option>
+              </select>
+            </div>
+            <div class="form-group">
+            <select class="form-control">
+              <option value="volvo">*Racial Status*</option>
+              <option value="volvo">White</option>
+              <option value="saab">Black or African American</option>
+              <option value="fiat">American Indian or Alaska Native</option>
+              <option value="audi">East Asian</option>
+              <option value="audi">Indian or South Asian</option>
+              <option value="audi">Native Hawaiian or Other Pacific Islander</option>
+            </select>
+          </div>
+            <div class="form-group">
+              <select class="form-control">
+                <option value="volvo">*Sexuality Preference*</option>
+                <option value="volvo">Heterosexual</option>
+                <option value="saab">LGBTQ+</option>
+                <option value="fiat">Asexual</option>
+                <option value="audi">Other</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <select class="form-control">
+                <option value="volvo">*Employment status*</option>
+                <option value="volvo">Stable job</option>
+                <option value="saab">work sucks</option>
+                <option value="fiat">Transgender</option>
+                <option value="audi">Unemployed</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <select class="form-control">
+                <option value="volvo">*Affected by COVID-19 pandemic*</option>
+                <option value="volvo">Stable job</option>
+                <option value="saab">Laid off</option>
+                <option value="fiat">Transgender</option>
+                <option value="audi">Unemployed</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Additional information (our system will attempt to use this information in your analysis)"></textarea>
+            </div>
+
+            <script>
+        function randomizeDisplay() {
+
+        }
+      </script>
+
+
+            <div class="form-group">
+              <button class="btn btn-primary py-3 px-5" type="button" onClick="testSubmitFunctionTwo()">Submit Form</button>
+            </div>
+          </form>
+
+
+      </div>
+    </center>
+
+
+  </section>
+
+  
 
     <section class="ftco-section">
     	<div class="container">
