--- a/index.html
+++ b/index.html
@@ -327,10 +327,6 @@
     				<div id="accordion">
     					<div class="row">
     						<div class="col-md-6">
-    							<div class="card">
-						        <div class="card-header">
-						        </div>
-						      </div>
 
 						      <div class="card">
 						        <div class="card-header">
@@ -386,7 +382,7 @@
       		<div class="col-md-6">
       			<div class="heading-section heading-section-white ftco-animate">
       				<span class="subheading">SuiSense</span>
-	            <h2 style="font-size: 30px;">Understand the Cryptic Messages</h2>
+	            <h2 style="font-size: 30px;">Using NLP to distinguish suicidal messages and provide personalized support.</h2>
 	          </div>
       		</div>
       		<div class="col-md-3 ftco-animate">
