fixed nav bar symbol

--- a/pairings.html
+++ b/pairings.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
-    
+
   </head>
   <body>
 
@@ -39,9 +39,9 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-            <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="analysis.html" class="nav-link">Analysis</a></li>
-            <li class="nav-item"><a class="nav-link" href="pairings.html">Pairings</a></li>
+            <li class="nav-item active"><a class="nav-link" href="pairings.html">Pairings</a></li>
             <li class="nav-item"><a href="blog.html" class="nav-link">Support</a></li>
             <li class="nav-item cta"><a href="analysis.html" class="nav-link"><span>Get started</span></a></li>
 	        </ul>
@@ -63,7 +63,7 @@
     </div>
 
 
-    <section> <!-- copied code from python anywhere form -->
+ <!-- copied code from python anywhere form -->
 <section class="ftco-section bg-white">
       <div class="container">
         <div class="row justify-content-center mb-5">
@@ -138,8 +138,6 @@
 
 
 </section>
-
-    </section>
 
     <section class="ftco-section bg-light">
     	<div class="container">
