--- a/analysis.html
+++ b/analysis.html
@@ -43,8 +43,8 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-            <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-           <li class="nav-item"><a href="analysis.html" class="nav-link">Analysis</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+           <li class="nav-item active"><a href="analysis.html" class="nav-link">Analysis</a></li>
            <li class="nav-item"><a class="nav-link" href="pairings.html">Pairings</a></li>
            <li class="nav-item"><a href="blog.html" class="nav-link">Support</a></li>
 	        </ul>
@@ -102,7 +102,7 @@
       </div>
     </div>
 <center>
-    <embed src="http://suisense.pythonanywhere.com/" style="width:800px; height: 555px;">
+    <embed src="http://suisense.pythonanywhere.com/" style="width:1800px; height: 555px;">
     </center>
   </section>
 
@@ -210,6 +210,177 @@
       </div>
     </center>
 
+
+  </section>
+
+
+
+    <section class="ftco-section">
+    	<div class="container">
+    		<div class="row justify-content-center mb-5">
+          <div class="col-md-7 text-center heading-section ftco-animate">
+            <h2 class="mb-4">Domain Pricing</h2>
+            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+          </div>
+        </div>
+    		<div class="row">
+    			<div class="col-md-12 ftco-animate">
+    				<div class="table-responsive">
+	    				<table class="table">
+						    <thead class="thead-primary">
+						      <tr>
+						        <th>TLD</th>
+						        <th>Duration</th>
+						        <th>Registration</th>
+						        <th>Renewal</th>
+						        <th>Transfer</th>
+						        <th>Register</th>
+						      </tr>
+						    </thead>
+						    <tbody>
+						      <tr>
+						        <td class="color">.com</td>
+						        <td>1 Year</td>
+						        <td>$70.00</td>
+						        <td>$5.00</td>
+						        <td>$5.00</td>
+						        <td><a href="#" class="btn btn-primary">Sign Up</a></td>
+						      </tr>
+						      <tr>
+						        <td class="color">.net</td>
+						        <td>1 Year</td>
+						        <td>$75.00</td>
+						        <td>$5.00</td>
+						        <td>$5.00</td>
+						        <td><a href="#" class="btn btn-primary">Sign Up</a></td>
+						      </tr>
+						      <tr>
+						        <td class="color">.org</td>
+						        <td>1 Year</td>
+						        <td>$65.00</td>
+						        <td>$5.00</td>
+						        <td>$5.00</td>
+						        <td><a href="#" class="btn btn-primary">Sign Up</a></td>
+						      </tr>
+						      <tr>
+						        <td class="color">.biz</td>
+						        <td>1 Year</td>
+						        <td>$60.00</td>
+						        <td>$5.00</td>
+						        <td>$5.00</td>
+						        <td><a href="#" class="btn btn-primary">Sign Up</a></td>
+						      </tr>
+						      <tr>
+						        <td class="color">.info</td>
+						        <td>1 Year</td>
+						        <td>$50.00</td>
+						        <td>$5.00</td>
+						        <td>$5.00</td>
+						        <td><a href="#" class="btn btn-primary">Sign Up</a></td>
+						      </tr>
+						      <tr>
+						        <td class="color">.me</td>
+						        <td>1 Year</td>
+						        <td>$45.00</td>
+						        <td>$5.00</td>
+						        <td>$5.00</td>
+						        <td><a href="#" class="btn btn-primary">Sign Up</a></td>
+						      </tr>
+						    </tbody>
+						  </table>
+					  </div>
+    			</div>
+    		</div>
+    	</div>
+    </section>
+
+    <section class="ftco-section bg-light">
+    	<div class="container">
+    		<div class="row justify-content-center mb-5">
+          <div class="col-md-7 text-center heading-section ftco-animate">
+            <h2 class="mb-4">Your Question</h2>
+            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+          </div>
+        </div>
+    		<div class="row">
+    			<div class="col-md-12 ftco-animate">
+    				<div id="accordion">
+    					<div class="row">
+    						<div class="col-md-6">
+    							<div class="card">
+						        <div class="card-header">
+										  <a class="card-link" data-toggle="collapse"  href="#menuone" aria-expanded="true" aria-controls="menuone">What is your domain name? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
+						        </div>
+						        <div id="menuone" class="collapse show">
+						          <div class="card-body">
+												<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.</p>
+						          </div>
+						        </div>
+						      </div>
+
+						      <div class="card">
+						        <div class="card-header">
+										  <a class="card-link" data-toggle="collapse"  href="#menutwo" aria-expanded="false" aria-controls="menutwo">How long is my domain name valid? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
+						        </div>
+						        <div id="menutwo" class="collapse">
+						          <div class="card-body">
+												<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.</p>
+						          </div>
+						        </div>
+						      </div>
+
+						      <div class="card">
+						        <div class="card-header">
+										  <a class="card-link" data-toggle="collapse"  href="#menu3" aria-expanded="false" aria-controls="menu3">Can I sell my domain name? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
+						        </div>
+						        <div id="menu3" class="collapse">
+						          <div class="card-body">
+												<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.</p>
+						          </div>
+						        </div>
+						      </div>
+    						</div>
+
+    						<div class="col-md-6">
+    							<div class="card">
+						        <div class="card-header">
+										  <a class="card-link" data-toggle="collapse"  href="#menu4" aria-expanded="false" aria-controls="menu4">Can I cancel a domain? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
+						        </div>
+						        <div id="menu4" class="collapse">
+						          <div class="card-body">
+												<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.</p>
+						          </div>
+						        </div>
+						      </div>
+
+						      <div class="card">
+						        <div class="card-header">
+										  <a class="card-link" data-toggle="collapse"  href="#menu5" aria-expanded="false" aria-controls="menu5">How do I transfer a domain name? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
+						        </div>
+						        <div id="menu5" class="collapse">
+						          <div class="card-body">
+												<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.</p>
+						          </div>
+						        </div>
+						      </div>
+
+						      <div class="card">
+						        <div class="card-header">
+										  <a class="card-link" data-toggle="collapse"  href="#menu6" aria-expanded="false" aria-controls="menu6">How do I setup URL forwarding? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
+						        </div>
+						        <div id="menu6" class="collapse">
+						          <div class="card-body">
+												<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.</p>
+						          </div>
+						        </div>
+						      </div>
+    						</div>
+    					</div>
+				    </div>
+    			</div>
+    		</div>
+    	</div>
+    </section>
 
 <!-- TESSERACT INFO -->
 
