--- a/blog.html
+++ b/blog.html
@@ -39,10 +39,10 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-            <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="analysis.html" class="nav-link">Analysis</a></li>
             <li class="nav-item"><a class="nav-link" href="pairings.html">Pairings</a></li>
-            <li class="nav-item"><a href="blog.html" class="nav-link">Support</a></li>
+            <li class="nav-item active"><a href="blog.html" class="nav-link">Support</a></li>
             <li class="nav-item cta"><a href="analysis.html" class="nav-link"><span>Get started</span></a></li>
 	        </ul>
 	      </div>
