--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 						        </div>
 						        <div id="menutwo" class="collapse">
 						          <div class="card-body">
-												<p>Suicidal intentions are very hard to detect within a person. People would typically be quiet about it and wouldn't want to open up because they often feel lonely and hopeless. Our model will be able to look at previous suicidal posts and will compare them with the inputted text in order to give an accurate conclusion on whether or not your friend is actualy suicidal. </p>
+												<p>It might be possible to tell that someone is upset or even depressed, but it is incredibly difficult to determine if someone has suicidal tendancies as a person. It is possible to tell based on their messages and their phrases, which means using our algorithm is the best way to distinctively tell if someone is suicidal or not. </p>
 						          </div>
 						        </div>
 						      </div>
@@ -345,7 +345,7 @@
 						        </div>
 						        <div id="menu3" class="collapse">
 						          <div class="card-body">
-												<p>This cite is mainly meant for friends of those who are going through depression so they can accurately see specifically what their friend is dealing with.</p>
+												<p>This site is mainly meant for friends of those who are going through depression so they can accurately see specifically what their friend is dealing with. Additionally, therapists and doctors can also use our algorithm to better understand their patients especially when their phrases are hard to distinguish and cryptic.</p>
 						          </div>
 						        </div>
 						      </div>
@@ -393,7 +393,7 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4 bg-primary p-4">
               <h2 class="ftco-heading-2">SuiSense</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <p>Utilizing AI to provide early detection of suicide to provide crucial support.</p>
               <ul class="ftco-footer-social list-unstyled mb-0">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
