--- a/index.html
+++ b/index.html
@@ -118,20 +118,6 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 d-flex align-self-stretch ftco-animate">
-            		<span class="flaticon-cloud-computing"></span>
-            	</div>
-              <div class="media-body pl-4 pl-md-0 pr-md-4 text-md-right">
-              </div>s
-            </div>
-          </div>
-          <div class="col-md-6 d-flex align-self-stretch ftco-animate">
-            		<span class="flaticon-settings"></span>
-            	</div>
-              <div class="media-body pl-4">
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </section>
@@ -191,7 +177,7 @@
     				<img src="images/undraw_podcast_q6p7.svg" class="img-fluid" alt="">
     				<div class="heading-section ftco-animate mt-5">
 	            <h2 class="mb-4">Our Process</h2>
-	            <p>We have created an organized step by step plan for people to first detect if their friend is potentially suicidal, and then pair them with a therapist to help them with a therapist best suited for their problem.</p>
+	            <p>We are a one stop shop for detecing suicidal and depressive tendancies and prodiving personalized support for those struggling with mental health. We are powered by AI/ML, NLP, and other algorithms to provide tailored diagnoses and support.</p>
 	          </div>
     			</div>
     			<div class="col-lg-6 py-5">
@@ -229,17 +215,18 @@
 		              </div>
 		            </div>
     					</div>
-    					<div class="col-md-6 ftco-animate">
-    						<div class="media block-6 services border text-left">
-		            	<div class="icon d-flex align-items-center justify-content-left">
-		            		<span class="flaticon-database"></span>
-		            	</div>
-		              <div class="mt-3 media-body media-body-2">
-		                <h3 class="heading">Getting Support</h3>
-		                <p>The friend will then be able to visit the map embedded within the website to contact local therapists and create a plan in order to support the friend that is depressed.</p>
-		              </div>
-		            </div>
-    					</div>
+
+              <div class="col-md-6 ftco-animate">
+                <div class="media block-6 services border text-left">
+                  <div class="icon d-flex align-items-center justify-content-center">
+                    <span class="flaticon-customer-service"></span>
+                  </div>
+                  <div class="mt-3 media-body media-body-2">
+                    <h3 class="heading">Getting Support</h3>
+                    <p>The friend will then be able to visit the map embedded within the website to contact local therapists and create a plan in order to support the friend that is depressed.</p>
+                  </div>
+                </div>
+              </div>
     				</div>
           </div>
     		</div>
