--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     	<div class="container">
     		<div class="row">
     			<div class="col-lg-6 py-5">
-    				<img src="images/undraw_podcast_q6p7.svg" class="img-fluid" alt="">
+    				<img src="images/therapist.jpg" class="img-fluid" alt="">
     				<div class="heading-section ftco-animate mt-5">
 	            <h2 class="mb-4">Our Process</h2>
 	            <p>We are a one stop shop for detecing suicidal and depressive tendancies and prodiving personalized support for those struggling with mental health. We are powered by AI/ML, NLP, and other algorithms to provide tailored diagnoses and support.</p>
