--- a/pairings.html
+++ b/pairings.html
@@ -246,15 +246,15 @@
             <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-right">
               <div class="card">
                 <div class="card-img">
-                  <img div style="width: 600px; height: 338px; overflow: hidden" src="assets/img/gilroypic.jpeg" alt="...">
+                  <img div style="width: 520px; height: 530px; overflow: hidden" src="images/william.jpeg" alt="...">
                 </div>
                 <div class="card-body">
                   <h3 class="card-title"><a href="">Your Information:</a></h3>
-                  <h5 class="card-title"><a href="">Gilroy High School</a></h5>
-                  <p class="card-text"><b>School Email:</b> vishraj55@gmail.com</p>
-                  <p class="card-text"><b>School Address:</b> 750 W 10th St, Gilroy, CA</p>
-                  <p class="card-text"><b>Devices Type Available:</b> Chromebooks</p>
-                  <p class="card-text"><b>Number of Devices Needed:</b> 1000</p>
+                  <h5 class="card-title"><a href="">Robert Williams</a></h5>
+                  <p class="card-text"><b>Email:</b> robertwilliams@gmail.com</p>
+                  <p class="card-text"><b>Office Address:</b> 750 W 10th St, Gilroy, CA</p>
+                  <p class="card-text"><b>Therapist Type:</b> Psychotherapist</p>
+                  <p class="card-text"><b>Availability:</b> 6/25/2020-7/10/2020, 9:00am - 5:30pm</p>
                 </div>
               </div>
             </div>
@@ -262,25 +262,17 @@
 
                       <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-left">
                         <div class="card">
-                          <div style="width: 600px; height: 338px; overflow: hidden" class="card-img">
-                            <img src="images/shereen.jpg" width="600" alt="...">
+                          <div style="width: 600px; height: 530px; overflow: hidden" class="card-img">
+                            <img src="images/shereen.jpg" width="540" alt="...">
                           </div>
                           <div class="card-body">
                             <h3 class="card-title"><a href="">Your Match:</a></h3>
                             <h5 class="card-title"><a href="">Dr. Shereen Mohsen</a></h5>
                             <p class="card-text"><b>Email:</b> shereenmohsen@gmail.com</p>
                             <p class="card-text"><b>Office Address:</b> 1101 S Winchester Blvd, Suite J-205, San Jose, California, 95128</p>
-                            <p class="card-text"><b>Therapist Type: </b>Availability:</b> 6/30/2020-7/7/2020, 9:00am - 5:30pm</p>
-                            <hr>
-                            <h5 class="card-title"><a href="">Recommendation</a></h5>
-                            <p class="card-text"><b>Number of Devices to Share:</b> 800</p>
-                            <p class="card-text"><b>Type of Shared Device:</b> Chromebooks</p>
-                            <p class="card-text"><b>Distance Between Schools:</b> 40.1 miles</p>
-                            <p class="card-text"><b>Recommended Plan:</b></p>
-                              <p class="card-text">-Schools should contact each other ASAP to begin the transfer</p>
-                              <p class="card-text">-Both schools should have volunteers ready to pick up devices</p>
-                              <p class="card-text"><b>Recommended Date:</b> June 5th, 2020 -- June 10th, 2020</p
-                                <div class="read-more"><a href="#"><i class="icofont-arrow-right"></i>Confirm Pairing to Begin</a></div>
+                            <p class="card-text"><b>Therapist Type: Licensed Clinical Psychologist</b></p>
+                            <p class="card-text"><b>Availability:</b> 6/30/2020-7/7/2020, 9:00am - 5:30pm</p>
+
                           </div>
                         </div>
 
