--- a/pairings.html
+++ b/pairings.html
@@ -64,15 +64,250 @@
 
 
  <!-- copied code from python anywhere form -->
+
+ <style>
+ /* tab css */
+
+#colorstrip{
+    width: 100%; height: 55px;
+    border: 1px solid #dfe0e0;
+    background-color: #ffffff;
+}
+
+
+
+/* Style the tab */
+.tab {
+  overflow: hidden;
+  background-color: #ffffff;
+display: inline-block;
+
+}
+
+/* Style the buttons inside the tab */
+
+
+
+.tab button {
+display: center;
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+  font-size: 17px;
+  color: #ffffff;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #6a28ff;
+}
+
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #6a28ff;
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
+}
+</style>
+
+<div class="container">
+  <div class="row justify-content-center mb-5">
+    <div class="col-md-7 text-center heading-section ftco-animate">
+      <h2 class="mb-4"> Therapist:</h2>
+      <p>Enter your information to be paired with someone who requires your services.   </p>
+    </div>
+  </div>
+</div>
+
+
+ <section id="Report" class="Reports section-bg">
+       <div class="container">
+         <div class="row">
+         </div>
+       </div>
+       <div class="contact-form">
+         <div id="errormessage"></div>
+         <head>
+         <meta name="viewport" content="width=device-width, initial-scale=1">
+         </head>
+         <body>
+ <center>
+   <span id="tabBackground"></span>
+   <div id="colorstrip"/>
+
+         <div class="tab">
+           <button class="tablinks" onclick="openCity(event, 'London')" id="defaultOpen">Device Donor</button>
+           <button class="tablinks" onclick="openCity(event, 'Paris')">Device Recipient</button>
+         </div>
+       </center>
+
+ <p></p>
+
+   <center>
+
+         <p class="null"></p>
+               <div id="London" class="tabcontent">
+                 <center>
+                 <form id="markerForm" method="post" role="form" class="contactForm">
+                   <label>Please upload a profile image of yourself here: </label>
+                       <label for="file-upload" class="custom-file-upload">
+                           Custom Upload
+                       </label>
+
+                       <br>
+                       <br>
+                       <input id="file-upload" type="file"/>
+
+                         <div class="col-md-6 pr-md-5">
+                           <form action="#">
+                             <div class="form-group">
+                               <input type="text" class="form-control" placeholder="Your Name">
+                             </div>
+                             <div class="form-group">
+                               <input type="text" class="form-control" placeholder="Your Email">
+                             </div>
+                             <div class="form-group">
+                               <input type="text" class="form-control" placeholder="Your Phone Number">
+                             </div>
+                             <div class="form-group">
+                               <input type="text" class="form-control" placeholder="Your Office Address">
+                             </div>
+                             <div class="form-group">
+                               <input type="text" class="form-control" placeholder="Your Availability Hours (Dates/Times)">
+                             </div>
+                             <div class="form-group">
+                               <input type="text" class="form-control" placeholder="Therapist Type">
+                             </div>
+                             <div class="form-group">
+                               <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Your Bio"></textarea>
+                             </div>
+                             <div class="form-group">
+                               <input type="button" value="Submit Form" class="btn btn-primary py-3 px-5">
+                             </div>
+                           </form>
+
+
+                       </div>
+
+
+                     <script>
+                       function testSubmitFunction() {
+                         document.getElementById("hometown").style.display = "block";
+                       }
+                     </script>
+
+
+                   </div>
+                 </form>
+
+       <p></p>
+
+                 <div id="hometown" style="display: none">
+                     <p class="hometown">Thank you for submitting your report! You should receive an email notification when our system has found a match.</p>
+                 </div>
+               </center>
+               </div>
+
+       <p></p>
+                 <p class="null"></p>
+               </div>
+
+               <div id="Paris" class="tabcontent">
+                 <center>
+                 <form id="markerForm" method="post" role="form" class="contactForm">
+                   <div class="col-md-3"></div>
+                   <div class="col-md-3"></div>
+                   <div class="col-md-6 col-md-offset-3">
+                     <label>Please upload a profile image of yourself here: </label>
+                         <label for="file-upload" class="custom-file-upload">
+                             Custom Upload
+                         </label>
+
+                         <br>
+                         <br>
+                         <input id="file-upload" type="file"/>
+
+                           <div class="col-md-6 pr-md-5">
+                             <form action="#">
+                               <div class="form-group">
+                                 <input type="text" class="form-control" placeholder="Your Name">
+                               </div>
+                               <div class="form-group">
+                                 <input type="text" class="form-control" placeholder="Your Email">
+                               </div>
+                               <div class="form-group">
+                                 <input type="text" class="form-control" placeholder="Your Phone Number">
+                               </div>
+                               <div class="form-group">
+                                 <input type="text" class="form-control" placeholder="Your Office Address">
+                               </div>
+                               <div class="form-group">
+                                 <input type="text" class="form-control" placeholder="Your Availability Hours (Dates/Times)">
+                               </div>
+                               <div class="form-group">
+                                 <input type="text" class="form-control" placeholder="Therapist Type">
+                               </div>
+                               <div class="form-group">
+                                 <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Your Bio"></textarea>
+                               </div>
+                               <div class="form-group">
+                                 <input type="submit" value="Submit Form" class="btn btn-primary py-3 px-5">
+                               </div>
+                             </form>
+
+
+                         </div>
+
+       <script>
+         function testSubmitFunctionTwo() {
+           document.getElementById("hometownTwo").style.display = "block";
+         }
+       </script>
+                     <button class="formSubmitButton" type="button" onClick="initMapTwo();testSubmitFunctionTwo()">Submit</button>
+                   </div>
+                 </form>
+         <p class="null"></p>
+       <div id="hometownTwo" style="display: none">
+           <p class="hometown">Thank you for submitting your report! You should receive an email notification when our system has found a match.</p>
+       </div>
+                 </center>
+               </div>
+
+         <script>
+         function openCity(evt, cityName) {
+           var i, tabcontent, tablinks;
+           tabcontent = document.getElementsByClassName("tabcontent");
+           for (i = 0; i < tabcontent.length; i++) {
+             tabcontent[i].style.display = "none";
+           }
+           tablinks = document.getElementsByClassName("tablinks");
+           for (i = 0; i < tablinks.length; i++) {
+             tablinks[i].className = tablinks[i].className.replace(" active", "");
+           }
+           document.getElementById(cityName).style.display = "block";
+           evt.currentTarget.className += " active";
+         }
+
+         document.getElementById("defaultOpen").click();
+         </script>
+
+         </body>
+       </div>
+     </section>
+
+
 <section class="ftco-section bg-white">
-      <div class="container">
-        <div class="row justify-content-center mb-5">
-          <div class="col-md-7 text-center heading-section ftco-animate">
-            <h2 class="mb-4"> Therapist:</h2>
-            <p>Enter your information to be paired with someone who requires your services.   </p>
-          </div>
-        </div>
-      </div>
 
       <style>
       input[type="file"] {
@@ -93,48 +328,6 @@
       background: #ffffff;
     }
     </style>
-
-<center>
-<label>Please upload a profile image of yourself here: </label>
-    <label for="file-upload" class="custom-file-upload">
-        Custom Upload
-    </label>
-
-    <br>
-    <br>
-    <input id="file-upload" type="file"/>
-
-      <div class="col-md-6 pr-md-5">
-        <form action="#">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Your Name">
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Your Email">
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Your Phone Number">
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Your Office Address">
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Your Availability Hours (Dates/Times)">
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Therapist Type">
-          </div>
-          <div class="form-group">
-            <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Your Bio"></textarea>
-          </div>
-          <div class="form-group">
-            <input type="submit" value="Submit Form" class="btn btn-primary py-3 px-5">
-          </div>
-        </form>
-
-
-    </div>
-  </center>
 
 
 </section>
