--- a/pairings.html
+++ b/pairings.html
@@ -249,16 +249,10 @@ display: center;
                                <input type="text" class="form-control" placeholder="Your Phone Number">
                              </div>
                              <div class="form-group">
-                               <input type="text" class="form-control" placeholder="Your Office Address">
-                             </div>
-                             <div class="form-group">
                                <input type="text" class="form-control" placeholder="Your Availability Hours (Dates/Times)">
                              </div>
                              <div class="form-group">
-                               <input type="text" class="form-control" placeholder="Therapist Type">
-                             </div>
-                             <div class="form-group">
-                               <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Your Bio"></textarea>
+                               <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Summary of your situation"></textarea>
                              </div>
                              <div class="form-group">
                                <input type="button" value="Submit Form" class="btn btn-primary py-3 px-5">
