--- a/blog.html
+++ b/blog.html
@@ -55,8 +55,8 @@
       <div class="container">
         <div class="row no-gutters slider-text align-items-end justify-content-start">
           <div class="col-md-8 ftco-animate text-center text-md-left mb-5">
-          	<p class="breadcrumbs mb-0"><span class="mr-3"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Blog</span></p>
-            <h1 class="mb-3 bread">Blog</h1>
+          	<p class="breadcrumbs mb-0"><span class="mr-3"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Support</span></p>
+            <h1 class="mb-3 bread">Support</h1>
           </div>
         </div>
       </div>
