--- a/pairings.html
+++ b/pairings.html
@@ -456,7 +456,7 @@ display: center;
                   <h3 class="card-title"><a href="">Your Information:</a></h3>
                   <h5 class="card-title"><a href="">Robert Williams</a></h5>
                   <p class="card-text"><b>Email:</b> robertwilliams@gmail.com</p>
-                  <p class="card-text"><b>Office Address:</b> 750 W 10th St, Gilroy, CA</p>
+                  <p class="card-text"><b>Home Address:</b> 750 W 10th St, Gilroy, CA</p>
                   <p class="card-text"><b>Therapist Type:</b> Psychotherapist</p>
                   <p class="card-text"><b>Availability:</b> 6/25/2020-7/10/2020, 9:00am - 5:30pm</p>
                 </div>
