Quick Pairings Fix

--- a/pairings.html
+++ b/pairings.html
@@ -127,7 +127,7 @@ display: center;
   <div class="row justify-content-center mb-5">
     <div class="col-md-7 text-center heading-section ftco-animate">
       <h2 class="mb-4"> Therapist:</h2>
-      <p>Enter your information to be paired with someone who requires your services.   </p>
+      <p>Enter your Match to be paired with someone who requires your services.   </p>
     </div>
   </div>
 </div>
