Edit to Pairings

--- a/pairings.html
+++ b/pairings.html
@@ -127,10 +127,11 @@ display: center;
   <div class="row justify-content-center mb-5">
     <div class="col-md-7 text-center heading-section ftco-animate">
       <h2 class="mb-4"> Therapist:</h2>
-      <p>Enter your Match to be paired with someone who requires your services.   </p>
+      <p>Enter your personal information to be paired with someone who requires your services.   </p>
     </div>
   </div>
 </div>
+
 
 
  <section id="Report" class="Reports section-bg">
@@ -453,7 +454,7 @@ display: center;
                   <img div style="width: 520px; height: 530px; overflow: hidden" src="images/william.jpeg" alt="...">
                 </div>
                 <div class="card-body">
-                  <h3 class="card-title"><a href="">Your Information:</a></h3>
+                  <h3 class="card-title"><a href="">Your Match:</a></h3>
                   <h5 class="card-title"><a href="">Robert Williams</a></h5>
                   <p class="card-text"><b>Email:</b> robertwilliams@gmail.com</p>
                   <p class="card-text"><b>Home Address:</b> 750 W 10th St, Gilroy, CA</p>
