--- a/analysis.html
+++ b/analysis.html
@@ -96,7 +96,8 @@
       <div class="row justify-content-center mb-5">
         <div class="col-md-7 text-center heading-section ftco-animate">
           <center>
-          <h2 class="mb-4">Analyze your text</h2>
+          <h2 class="mb-4">Classify Your Messages</h2>
+          <p>Please fill out the form below with text that you copied from a message or remembered hearing Use the upload button if you want to process a picture of a note or screenshot of a text conversation.</p>
           <hr>
           </center>
         </div>
@@ -111,7 +112,7 @@
         <div class="container">
           <div class="row justify-content-center mb-5">
             <div class="col-md-7 text-center heading-section ftco-animate">
-              <h2 class="mb-4"> Stage Progression Form</h2>
+              <h2 class="mb-4"> Analyze Your Specific Case</h2>
               <p>Please fill out the data below for a more detailed analysis.</p>
               <hr>
             </div>
@@ -232,9 +233,9 @@
               <div class="container">
                 <div class="row justify-content-center mb-5">
                   <div class="col-md-7 text-center heading-section ftco-animate">
-                    <h2 class="mb-4">Output</h2>
+                    <h2 class="mb-4">Your Progression Stage</h2>
                     <hr>
-                    <p class="hometown">You have been classified in Stage 3: High Self-Awareness.</p>
+                    <p class="hometown">You have been classified in Stage 3: High Self-Awareness and Self-Doubt.</p>
                   </div>
                 </div>
               </div>
