--- a/analysis.html
+++ b/analysis.html
@@ -204,43 +204,26 @@
               <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Additional information (our system will attempt to use this information in your analysis)"></textarea>
             </div>
 
-            <script>
-        function progressionOutput() {
-          document.getElementById("hometowntwo").style.display === "none"
-        }
-      </script>
+<script>
+            function testSubmitFunction() {
+            document.getElementById("hometown").style.display = "block";
+          }
+        </script>
 
+<button class="btn btn-primary py-3 px-5" type="button" onClick="testSubmitFunction()">Submit Form</button>
 
-            <div class="form-group">
-              <button class="btn btn-primary py-3 px-5" type="button" onClick="progressionOutput()">Submit Form</button>
-            </div>
           </form>
 
-
-          <style>
-          .hometown {
-          color: #000000;
-            background: #b1f587;
-          }
-
-          .hometowntwo {
-            display: none;
-          }
-
-          </style>
-          <center>
-            <div id="hometowntwo" style="display: block">
-              <div class="container">
-                <div class="row justify-content-center mb-5">
-                  <div class="col-md-7 text-center heading-section ftco-animate">
-                    <h2 class="mb-4">Your Progression Stage</h2>
-                    <hr>
-                    <p class="hometown">You have been classified in Stage 3: High Self-Awareness and Self-Doubt.</p>
-                  </div>
-                </div>
+          <div id="hometown" style="display: none">
+            <br>
+            <div class="row justify-content-center mb-5">
+              <div class="col-md-7 text-center heading-section ftco-animate">
+                <h2 class="mb-4"> Analyze Your Specific Case</h2>
+                <hr>
               </div>
             </div>
-          </center>
+                              <p class="hometown">You have been classified in Stage 3: High Self-Awareness and Self-Doubt.</p>
+                          </div>
 
       </div>
     </center>
@@ -249,6 +232,17 @@
   </section>
 
 <section>
+
+  <style>
+  .hometown {
+
+  text-align: center;
+  color: #000000;
+    background: #b1f587;
+  display: block;
+  }
+
+  </style>
 
 </section>
 
