--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             	</div>
               <div class="media-body pl-4 pl-md-0 pr-md-4 text-md-right">
                 <h3 class="heading">The Problem</h3>
-                <p class="mb-0">Suicide is a major issue present in our world currently. It takes the lives of thousands of people everyday, and often times it's because no one is there to help.
+                <p class="mb-0">While our team has transitioned to COVID life with ease, those suffering from mental instability have struggled. With the insurmountable stress accumulating with quarantine, which can come from being laid off or dealing with an abusive family, people are simply not happy at home. Thus, we took a unique approach to the “Happy at Home” track. While it is important to keep people productive through entertainment or productivity hacks, people who suffer from mental instability are more vulnerable and unproductive, meaning preventing the harms of mental instability is the root of being “Happy at Home.”.
               </div>
             </div>
           </div>
@@ -92,7 +92,7 @@
             	</div>
               <div class="media-body pl-4">
                 <h3 class="heading">Causes</h3>
-                <p class="mb-0">Those that consider suicide likely experience a deep feeling of hopelessness. Depression, the root of suicide is widely considered to be a key risk factor. </p>
+                <p class="mb-0">Those that consider suicide likely experience a deep feeling of hopelessness. Depression, the root of suicide is widely considered to be a key risk factor. However, there is a clear distinction between the two and how they are treated, as depression is much less severe and much more approachable. Luckily, those who struggle often open up to their friends over text and send messages, however, these friends are often in the dark in terms of trying to understand their friend's mental state.</p>
               </div>
             </div>
           </div>
@@ -102,7 +102,7 @@
             		<span class="flaticon-customer-service"></span>
             	</div>
               <div class="media-body pl-4 pl-md-0 pr-md-4 text-md-right">
-                <h3 class="heading">Friends</h3>
+                <h3 class="heading">Friends and Family</h3>
                 <p> People facing depression typically tend to resort to their friends first when seeking assistance. Friends are people that they can trust and are comfortable with allowing for a safe environment. </p>
               </div>
             </div>
