Final Pairing Cards

--- a/pairings.html
+++ b/pairings.html
@@ -461,6 +461,7 @@ display: center;
                   <p class="card-text"><b>Home Address:</b> 750 W 10th St, Gilroy, CA</p>
                   <p class="card-text"><b>Therapist Type:</b> Psychotherapist</p>
                   <p class="card-text"><b>Availability:</b> 6/25/2020-7/10/2020, 9:00am - 5:30pm</p>
+                  <p class="card-text"><b>Bio:</b> I do evaluations of emotional damage deriving from personal injury, sexual or racial harassment and sexual abuse (including in psychotherapy) using objective psychological assessment devices</p>
                 </div>
               </div>
             </div>
@@ -476,8 +477,10 @@ display: center;
                             <h5 class="card-title"><a href="">Dr. Shereen Mohsen</a></h5>
                             <p class="card-text"><b>Email:</b> shereenmohsen@gmail.com</p>
                             <p class="card-text"><b>Office Address:</b> 1101 S Winchester Blvd, Suite J-205, San Jose, California, 95128</p>
-                            <p class="card-text"><b>Therapist Type: Licensed Clinical Psychologist</b></p>
+                            <p class="card-text"><b>Therapist Type:</b> Licensed Clinical Psychologist</p>
                             <p class="card-text"><b>Availability:</b> 6/30/2020-7/7/2020, 9:00am - 5:30pm</p>
+                            <p class="card-text"><b>Bio:</b> I work on Individual Counseling, Marriage and Family, Consultation, Health and Wellness, Crisis Intervention / Trauma, and Education / Schooling.</p>
+
 
                           </div>
                         </div>
