fixed text to left justified

--- a/analysis.html
+++ b/analysis.html
@@ -186,18 +186,18 @@
               <select class="form-control">
                 <option value="volvo">*Employment status*</option>
                 <option value="volvo">Stable job</option>
-                <option value="saab">work sucks</option>
-                <option value="fiat">Transgender</option>
+                <option value="saab">Tense work environment</option>
+                <option value="fiat">Nearly fired</option>
                 <option value="audi">Unemployed</option>
               </select>
             </div>
             <div class="form-group">
               <select class="form-control">
                 <option value="volvo">*Affected by COVID-19 pandemic*</option>
-                <option value="volvo">Stable job</option>
-                <option value="saab">Laid off</option>
-                <option value="fiat">Transgender</option>
-                <option value="audi">Unemployed</option>
+                <option value="volvo">Health problems</option>
+                <option value="saab">Unemployed</option>
+                <option value="fiat">Family problems</option>
+                <option value="audi">Other</option>
               </select>
             </div>
             <div class="form-group">
