--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             	<div class="icon d-flex align-items-center justify-content-center order-md-last">
             		<span class="flaticon-cloud"></span>
             	</div>
-              <div class="media-body pl-4 pl-md-0 pr-md-4 text-md-right">
+              <div class="media-body pl-4 pl-md-0 pr-md-4 text-md-left">
                 <h3 class="heading">The Problem</h3>
                 <p class="mb-0">While our team has transitioned to COVID life with ease, those suffering from mental instability have struggled. With the insurmountable stress accumulating with quarantine, which can come from being laid off or dealing with an abusive family, people are simply not happy at home. Thus, we took a unique approach to the “Happy at Home” track. While it is important to keep people productive through entertainment or productivity hacks, people who suffer from mental instability are more vulnerable and unproductive, meaning preventing the harms of mental instability is the root of being “Happy at Home.”.
               </div>
@@ -101,7 +101,7 @@
             	<div class="icon d-flex align-items-center justify-content-center order-md-last">
             		<span class="flaticon-customer-service"></span>
             	</div>
-              <div class="media-body pl-4 pl-md-0 pr-md-4 text-md-right">
+              <div class="media-body pl-4 pl-md-0 pr-md-4 text-md-left">
                 <h3 class="heading">Friends and Family</h3>
                 <p> People facing depression typically tend to resort to their friends first when seeking assistance. Friends are people that they can trust and are comfortable with allowing for a safe environment. </p>
               </div>
