Fixed Custom Upload Button

--- a/pairings.html
+++ b/pairings.html
@@ -129,7 +129,7 @@ display: center;
       <p></p>
       <p></p>
       <p></p>
-      <h2 class="mb-4"> Therapist:</h2>
+      <h2 class="mb-4"> Therapist Pairing:</h2>
       <p>Enter your personal information to be paired with someone who requires your services.   </p>
     </div>
   </div>
@@ -166,7 +166,7 @@ display: center;
                <div id="London" class="tabcontent">
                  <center>
                  <form id="markerForm" method="post" role="form" class="contactForm">
-                   <label>Please upload a profile image of yourself here: </label>
+                   <label>Please upload a profile image of yourself here: </label><br>
                        <label for="file-upload" class="custom-file-upload">
                            Custom Upload
                        </label>
@@ -232,7 +232,7 @@ display: center;
                <div id="Paris" class="tabcontent">
                  <center>
                  <form id="markerForm" method="post" role="form" class="contactForm">
-                   <label>Please upload a profile image of yourself here: </label>
+                   <label>Please upload a profile image of yourself here: </label> <br>
                        <label for="file-upload" class="custom-file-upload">
                            Custom Upload
                        </label>
