changed home picture

--- a/index.html
+++ b/index.html
@@ -50,21 +50,25 @@
 	  </nav>
     <!-- END nav -->
 
+
     <div class="hero-wrap js-fullheight">
       <div class="overlay"></div>
       <div class="container-fluid px-0">
-      	<div class="row d-md-flex no-gutters slider-text align-items-center js-fullheight justify-content-end">
-	      	<img class="one-fourth js-fullheight align-end order-md-last img-fluid" src="images/IMG-0517.jpg" alt="">
+      	<div class="row d-md-flex no-gutters slider-text align-items-left js-fullheight justify-content-end">
+	      	<img class="one-fourth js-fullheight align-end order-md-last img-fluid" src="images/altHomeImage.png" alt="">
 	        <div class="one-forth d-flex align-items-center ftco-animate js-fullheight">
 	        	<div class="text mt-5">
-	            <h1 class="mb-3"><span>SuiSense</h1>
-	            <p>Using NLP to distinguish suicidal messages and provide personalized support.</p>
+	            <h1 class="mb-1"><span>SuiSense</h1>
+	            <p>Using Natural Language Processing (NLP) to distinguish suicidal messages and provide personalized support.</p>
 	            <p><a href="analysis.html" class="btn btn-primary px-4 py-3">Get Started</a></p>
 	          </div>
 	        </div>
 	    	</div>
       </div>
     </div>
+
+
+
 
     <section class="ftco-section services-section bg-light">
       <div class="container">
