Fixed Pairing Spacing

--- a/pairings.html
+++ b/pairings.html
@@ -122,10 +122,11 @@ display: center;
   border-top: none;
 }
 </style>
+<section class="ftco-section bg-white">
+  <div class="container">
+    <div class="row justify-content-center mb-5">
+      <div class="col-md-7 text-center heading-section ftco-animate">
 
-<div class="container">
-  <div class="row justify-content-center mb-5">
-    <div class="col-md-7 text-center heading-section ftco-animate">
       <p></p>
       <p></p>
       <p></p>
