fixed "the problem"

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
             <div class="media block-6 services d-flex align-items-center">
               <div class="media-body pl-4 pl-md-0 pr-md-4 text-md-left">
                 <h3 class="heading">The Problem</h3>
-                <p class="mb-0">While our team has transitioned to COVID life with ease, those suffering from mental instability have struggled. With the insurmountable stress accumulating with quarantine, which can come from being laid off or dealing with an abusive family, people are simply not happy at home. Thus, we took a unique approach to the “Happy at Home” track. While it is important to keep people productive through entertainment or productivity hacks, people who suffer from mental instability are more vulnerable and unproductive, meaning preventing the harms of mental instability is the root of being “Happy at Home.”.
+                <p class="mb-0">While our team has adjusted well to the shift into the COVID lifestyle , those suffering from mental instability have struggled. With the insurmountable stress accumulating from quarantine, which can come from being laid off or dealing with an abusive family, people are simply not happy at home. We realized that the effects of COVID have taken a serious toll on people across the world, and could potentially create extreme mental health problems for many.
+
               </div>
             </div>
           </div>
