--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="media block-6 services d-flex align-items-center">
               <div class="media-body pl-4">
                 <h3 class="heading">Causes</h3>
-                <p class="mb-0">Those that consider suicide likely experience a deep feeling of hopelessness. Depression, the root of suicide is widely considered to be a key risk factor. However, there is a clear distinction between the two and how they are treated, as depression is much less severe and much more approachable. Luckily, those who struggle often open up to their friends over text and send messages, however, these friends are often in the dark in terms of trying to understand their friend's mental state.</p>
+                <p class="mb-0">Those that consider suicide likely experience a deep feeling of hopelessness. This feeling of hopelessness could likely develop from the from the lack of interaction with others due to the arrival of COVID. Depression, the root of suicide is widely considered to be a key risk factor. However, there is a clear distinction between the two and how they are treated, as depression is much less severe and much more approachable. Luckily, those who struggle often open up to their friends over text and send messages, however, these friends are often in the dark in terms of trying to understand their friend's mental state.</p>
               </div>
             </div>
           </div>
