attempt 1 of fixing python anywhere embedded in website

--- a/analysis.html
+++ b/analysis.html
@@ -104,7 +104,7 @@
       </div>
     </div>
 <center>
-    <embed src="http://suisense.pythonanywhere.com/" style="width:1800px; height: 555px;">
+    <embed src="https://suisense.pythonanywhere.com/" style="width:1800px; height: 555px;">
     </center>
   </section>
 
