fixed text in index.html

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="media block-6 services d-flex align-items-center">
               <div class="media-body pl-4 pl-md-0 pr-md-4 text-md-left">
                 <h3 class="heading">The Problem</h3>
-                <p class="mb-0">While our team has adjusted well to the shift into the COVID lifestyle , those suffering from mental instability have struggled. With the insurmountable stress accumulating from quarantine, which can come from being laid off or dealing with an abusive family, people are simply not happy at home. We realized that the effects of COVID have taken a serious toll on people across the world, and could potentially create extreme mental health problems for many.
+                <p class="mb-0">While our team has adjusted well to the shift into the COVID lifestyle, those suffering from mental instability have struggled. With the insurmountable stress accumulating from quarantine, which can come from being laid off or dealing with an abusive family, people are simply not happy at home. We realized that the effects of COVID have taken a serious toll on people across the world, and could potentially create extreme mental health problems for many.
 
               </div>
             </div>
@@ -91,7 +91,7 @@
             <div class="media block-6 services d-flex align-items-center">
               <div class="media-body pl-4">
                 <h3 class="heading">Causes</h3>
-                <p class="mb-0">Those that consider suicide likely experience a deep feeling of hopelessness. This feeling of hopelessness could likely develop from the from the lack of interaction with others due to the arrival of COVID. Depression, the root of suicide is widely considered to be a key risk factor. However, there is a clear distinction between the two and how they are treated, as depression is much less severe and much more approachable. Luckily, those who struggle often open up to their friends over text and send messages, however, these friends are often in the dark in terms of trying to understand their friend's mental state.</p>
+                <p class="mb-0">Those that consider suicide likely experience a deep feeling of hopelessness. This feeling of hopelessness develops from the from the lack of interaction with others due to the arrival of COVID. Depression, the root of suicide, is widely considered to be a key risk factor. However, there is a clear distinction between the two and how they are treated. Those who struggle often open up to their friends over text and send messages; however, these friends are often in the dark in terms of trying to understand their friend's mental state.</p>
               </div>
             </div>
           </div>
@@ -107,7 +107,7 @@
             <div class="media block-6 services d-flex align-items-center">
               <div class="media-body pl-4">
                 <h3 class="heading">Early Detection</h3>
-                <p>It is very important that messages hinting at suicidal intentions are dectected right away. If noticed early, proper assistance can be provided in order to help those dealing with major depression.</p>
+                <p>It is very important that messages hinting at suicidal intentions are recognized right away. If noticed early, proper assistance can be provided in order to help those dealing with major depression.</p>
               </div>
             </div>
           </div>
@@ -170,7 +170,7 @@
     				<img src="images/therapist.jpg" class="img-fluid" alt="">
     				<div class="heading-section ftco-animate mt-5">
 	            <h2 class="mb-4">Our Process</h2>
-	            <p>We are a one stop shop for detecing suicidal and depressive tendancies and prodiving personalized support for those struggling with mental health. We are powered by AI/ML, NLP, and other algorithms to provide tailored diagnoses and support.</p>
+	            <p>We are a one stop shop for detecting suicidal and depressive tendencies and providing personalized support for those struggling with mental health. We are powered by AI/ML, NLP, and other algorithms to provide tailored diagnoses and support.</p>
 	          </div>
     			</div>
     			<div class="col-lg-6 py-5">
@@ -182,7 +182,7 @@
 		            	</div>
 		              <div class="mt-3 media-body media-body-2">
 		                <h3 class="heading">Primary Diagnosis</h3>
-		                <p>Using our basic NLP model, a friend can either input a screenshot, or write out text and will be able to see if their friend is just suffering depression, or is on the suicidal side. </p>
+		                <p>Using our basic NLP model, a friend can either input a screenshot or write out text, and will be able to see if their friend is suffering depression or is on the suicidal side. </p>
 		              </div>
 		            </div>
     					</div>
@@ -216,7 +216,7 @@
                   </div>
                   <div class="mt-3 media-body media-body-2">
                     <h3 class="heading">Getting Support</h3>
-                    <p>The friend will then be able to visit the map embedded within the website to contact local therapists and create a plan in order to support the friend that is depressed.</p>
+                    <p>The friend will then be able to visit the map embedded within the website to see local therapists and begin helping create a support system for the struggling person.</p>
                   </div>
                 </div>
               </div>
@@ -299,7 +299,7 @@
     	<div class="container">
     		<div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center heading-section ftco-animate">
-            <h2 class="mb-4">Frequently Asked Questions(FAQ)</h2>
+            <h2 class="mb-4">Frequently Asked Questions (FAQ)</h2>
           </div>
         </div>
     		<div class="row">
@@ -349,7 +349,7 @@
 						        </div>
 						        <div id="menu5" class="collapse">
 						          <div class="card-body">
-												<p>Unlike current existing models, which send an automated robot to help interact with the depressed person, ours is a full step by step process that will involve an experienced properly trained therapist and will eventually root back to the friend. This is important because the person that is depressed is much more likely to be more receptive to advice from their friends and real human beings rather than automated messages.</p>
+												<p>Unlike current existing models, which send an automated robot to help interact with the depressed person, ours is a comprehensive step by step process that will involve an experienced properly trained therapist and will eventually root back to the friend. This is important because the person that is depressed is much more likely to be more receptive to advice from their friends and real human beings rather than automated messages.</p>
 						          </div>
 						        </div>
 						      </div>
